chore: scss map update
