# ec_backend/src/entities/UserContent.ts
@@ -1,0 +1,9 @@
+import { Status } from '@prisma/client';
+
+export default interface UserContent {
+  id?: number;
+  userId: string;
+  contentId: number;
+  status?: Status;
+  progress?: number;
+}
