# ec_backend/src/slideshow-progress/dto/updateProgress.dto.ts
@@ -1,4 +1,4 @@
-import { IsIn, IsNumber, IsOptional } from 'class-validator';
+import { IsIn, IsInt, IsNumber, IsOptional } from 'class-validator';
 import validationMessages_EN from '../../helper/messages/validationMessages.en';
 import { ApiProperty } from '@nestjs/swagger';
 import { Status } from '@prisma/client';
@@ -33,4 +33,18 @@ export default class UpdateProgressDTO {
     },
   )
   progress?: number;
+
+  @ApiProperty({
+    title: 'UserContentId',
+    required: true,
+    type: 'number',
+    example: 2,
+  })
+  @IsOptional()
+  @IsInt({
+    message:
+      validationMessages_EN.slideshowProgress.generateProgressDTO.userContentId
+        .isInt,
+  })
+  userContentId: number;
 }
