# ec_backend/src/video-progress/video-progress.controller.ts
@@ -59,6 +59,7 @@ export class VideoProgressController {
     return this.videoProgressService.generateVideoProgress(
       data.userId,
       data.videoId,
+      data.userContentId,
     );
   }
 
